# simple-beam

./: .gitignore  HISTORY.md  LICENSE  MANIFEST.in  README.md  cosapp.json  setup.cfg  setup.py
simple_beam/: __init__.py
simple_beam/drivers/: __init__.py
simple_beam/ports/: geometryport.py
simple_beam/resources/: simple_beam.json
simple_beam/studies/: Untitled.ipynb
simple_beam/systems/: beamgeo.py  beammeca.py  main.py
