[metadata]
name = simple_beam
version = attr: simple_beam._version.__version__
author = Trung Le
description = CoSApp mechanical modelling of beam
long_description = file: README.md, HISTORY.md
license = Proprietary License
license-file = LICENSE
keywords = cosapp, simple_beam
classifiers = 
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: Other/Proprietary License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires = 
	cosapp
